fix height on mobile version

--- a/src/pages/StorePage/components/StoreHeader/StoreHeader.module.scss
+++ b/src/pages/StorePage/components/StoreHeader/StoreHeader.module.scss
@@ -76,7 +76,7 @@
     padding: 1rem 0 1.5rem 0;
     margin-left: 0;
     justify-content: center;
-
+    min-height: auto;
     max-width: 27.5rem;
     margin-left: auto;
     margin-right: auto;
